<resources>
    <string name="app_name">QURAN KAREEM</string>
    <string name="urduSurah">SURAH URDU</string>
    <string name="englishSurah">SURAH ENGLISH</string>
    <string name="englishPara">PARAH ENGLISH</string>
    <string name="urduPara">PARAH URDU</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search">Enter AyaID</string>
    <string name="email">ialiabbas86@gmail.com</string>
</resources>
