<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quran_bg"
    tools:context=".Home">

    <TextView
        android:id="@+id/textView"
        android:layout_width="296dp"
        android:layout_height="41dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="584dp"
        android:background="#FFFFFF"
        android:letterSpacing="0.09"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/titleColor"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/urduSuraBtn"
        android:layout_width="368dp"
        android:layout_height="63dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/toolbarBg"
        android:letterSpacing="0.5"
        android:text="@string/urduSurah"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/engSuraBtn"
        android:layout_width="368dp"
        android:layout_height="63dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/toolbarBg"
        android:letterSpacing="0.4"
        android:text="@string/englishSurah"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/urduSuraBtn" />

    <Button
        android:id="@+id/engParaBtn"
        android:layout_width="368dp"
        android:layout_height="63dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/toolbarBg"
        android:letterSpacing="0.4"
        android:text="@string/englishPara"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/urduSuraBtn" />

    <Button
        android:id="@+id/urduParaBtn"
        android:layout_width="368dp"
        android:layout_height="63dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/toolbarBg"
        android:letterSpacing="0.4"
        android:text="@string/urduPara"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/urduSuraBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>